--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="carousel-item active">
           <img src="img/bg-1.jpg" class="d-block w-100" alt="Банер Альпіністів">
         </div>
-        <div class="carousel-item">
+        <!-- <div class="carousel-item">
           <img src="img/bg-2.jpg" class="d-block w-100" alt="Новий банер зробити в Photoshop">
-        </div>
+        </div> -->
       </div>
       <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
