--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link" href="about.html">Головна</a></li>
-          <li class="nav-item"><a class="nav-link" href="services.html">Послуги</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Контакти</a></li>
+          <li class="nav-item"><a class="nav-link" href="#carouselExampleFade">Головна</a></li>
+          <li class="nav-item"><a class="nav-link" href="#workalp">Послуги</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contacts">Контакти</a></li>
           <button type="button" class="btn btn-warning">Замовити Дзвінок</button>
         </ul>
       </div>
@@ -86,7 +86,7 @@
         </div>
       </div>
     </section>
-    <div class="container">
+    <div class="container" id="workalp">
       <div class="row">
         <div class="col-lg-12 text-center animated bounceInUp poslugu">
           <h2 class="section-heading text-uppercase">Наші Послуги Альпіністів</h2>
@@ -201,11 +201,13 @@
   <footer>
 
     <br>
-    <div class="container">
-      <div class="col-lg-12 text-center animated bounceInUp poslugu">
-        <h2 class="section-heading text-uppercase">Наші Контакти:</h2>
+    <section id="contacts">
+      <div class="container">
+        <div class="col-lg-12 text-center animated bounceInUp poslugu">
+          <h2 class="section-heading text-uppercase">Наші Контакти:</h2>
+        </div>
       </div>
-    </div>
+    </section>
 
     <section class="page-section">
       <div class="container">
